--- a/style.css
+++ b/style.css
@@ -1,16 +1,36 @@
 body{
-     background-color:purple;
-     color: black;
-     font-family:"Montserrat";
-     display:flex;
-     justify-content: center;
-     align-items:center;
-     height: 700px;
-     margin:0;
-}
-
-button{
-    background-color: rgb(255, 113, 255) ;
+    background-color: purple;
     color: black;
-    font-family:"Montserrat";
-}
+    font-family: "Montserrat";
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 700px;
+    margin: 0;
+ }
+ 
+ 
+ button{
+    background-color: rgb(255, 113, 255);
+    color: black;
+    font-family: "Montserrat";
+ }
+ 
+ 
+ .passo{
+    display: none;
+ }
+ 
+ 
+ .passo.ativo{
+    display: block;
+ }
+ 
+ main{
+   text-align: center;
+   max-width: 90%;
+ }
+
+ img{
+   max-width: 30%;
+ }
